k8s-apps/tools/archivebox/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: archivebox
  labels:
    app.kubernetes.io/name: archivebox
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: archivebox
